parse module name from module-info.java, thus no longer need javaModule.name in build.gradle.kts
if module-info.java is absent, then don't use modules at all, instead of throwing an exception

obtain SourceSetContainer by extension type instead of by property name

use String constants instead of literals

Java Tool String options in interfaces in jdk sub package

lock all Gradle dependencies, including plugin dependencies

spacing

resolves gradle/gradle-java-modules#2

partial gradle/gradle-java-modules#22